[package]
name = "dirmod"
version = "0.1.1"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/dirmod.git"
homepage = "https://github.com/SOF3/dirmod"
description = "Automatic mod.rs definition"
readme = "README.md"
categories = ["development-tools"]
keywords = ["module"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
smallvec = "0.6.10"
syn = {version = "1.0", features = ["extra-traits"]}

[dev-dependencies]
matches = "0.1.8"
