[workspace]
members = [
	".",
	"codegen",
	"testcrate",
]

[package]
name = "dirmod"
version = "0.2.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/dirmod.git"
homepage = "https://github.com/SOF3/dirmod"
description = "Automatic mod declarations"
documentation = "https://sof3.github.io/dirmod/"
readme = "README.md"
categories = ["development-tools"]
keywords = ["mod", "module"]

[dependencies]
dirmod-codegen = {version = "0.2.0", path = "codegen"}
