[package]
name = "dirmod-codegen"
version = "0.2.0-alpha.1"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/dirmod.git"
homepage = "https://github.com/SOF3/dirmod"
description = "Automatic mod declarations"
categories = ["development-tools"]
keywords = ["mod", "module"]

[lib]
proc-macro = true

[dependencies]
matches = "0.1.8"
proc-macro2 = "1.0"
quote = "1.0"
smallvec = "1.0.0"
syn = {version = "1.0", features = ["extra-traits"]}
